--- a/data/README
+++ b/data/README
@@ -2,4 +2,8 @@ original source link: https://worksheets.codalab.org/worksheets/0xbda93e6519134c
 
 processed_json: the files are downloaded from the above link, in the section right before the 'How well automatic metrics correlate with human judgement?'. 
 
-raw_json: extracted from the data file, which can be found in the 'Code and data' Section in the above page, towards the very beginning.
+raw_json: extracted from the data file, which can be found in the 'Code and data' Section in the above source link, towards the very beginning.
+
+sorted_scores.json: built from processed_json. In this file, for each article, its summaries are sorted in the ascending order by their human rating scores.
+
+doc_summ_bert_vectors.pkl: output of 'step1_encode_doc_summ.py'. This file will be used by 'step2_train_rewarder.py'.
